# feecc-io-gateway

./: .flake8  .gitignore  Dockerfile  Dockerfile-arm  Makefile  app.py  coverage.xml  docker-compose.yml  pyproject.toml
.github/workflows/: Deploy-in-dev-k8s.yml  Deploy-in-master-k8s.yml  python-ci.yml
docs/: README.md
src/: app.py  camera_config.yaml  config.yaml  database.py  dependencies.py
src/io_gateway/: app.py  ipfs.py  models.py  pinata.py  utils.py
src/printing/: _Printer.py  app.py  models.py
src/shared/: Config.py  Types.py  config.py  config_models.py
src/video/: app.py  camera.py  dependencies.py  models.py  utils.py
tests/: __init__.py
tests/base/: test_base.py
tests/devices/: test_printing.py  test_video.py
tests/external_io/: test_external_io.py
